--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="./image/icon.png">
-    <title>Portfolios</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Portfolio/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -141,16 +141,16 @@
     <div class="d-flex justify-content-center">
      <div class="share-button" style="text-align: center;" id="share">
         <div style="align-items: center;"></div>
-         <span><i class="fas-fa-share-alt" ></i><img src="/New folder/porfolio//share.png" alt="Card image" style="width:8%">Share!</span>
-         <a href="https://www.facebook.com/"> <img src="/New folder/porfolio//facebook.png" alt="Card image" style="width:50%"></a>
-         <a href="https://twitter.com/"> <img src="/New folder/porfolio//twitter.png" alt="Card image" style="width:50%"></a> 
-         <a href="https://www.linkedin.com/"> </i> <img src="/New folder/porfolio//linkedin.png" alt="Card image" style="width:50%"></a>
-         <a href="https://instagram.com/">  <img src="/New folder/porfolio//instagram.png" alt="Card image" style="width:50%"></a>
+         <span><i class="fas-fa-share-alt" ></i><img src="./image/share.png" alt="Card image" style="width:8%">Share!</span>
+         <a href="https://www.facebook.com/"> <img src="./image/facebook.png" alt="Card image" style="width:50%"></a>
+         <a href="https://twitter.com/"> <img src="./image/twitter.png" alt="Card image" style="width:50%"></a> 
+         <a href="https://www.linkedin.com/"> </i> <img src="./image/linkedin.png" alt="Card image" style="width:50%"></a>
+         <a href="https://instagram.com/">  <img src="./image/instagram.png" alt="Card image" style="width:50%"></a>
        </div>
     </div>
-    <a class="gotopbtn" href="#"><i class="fat fat-arrow-up"></i><img src="/New folder/porfolio/up-squared-64.png" alt="Card image" style="width:86%"></a>
+    <a class="gotopbtn" href="#"><i class="fat fat-arrow-up"></i><img src="./image/up-squared-64.png" alt="Card image" style="width:86%"></a>
        <script src="/bootstrap/js/jqurey.min.js"></script>
        <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </div>
-</html>~
+</html>
