--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <section class="header">
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark container-fluid">
-    <a href="" class="navbar-brand  "><img src="image/icon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+    <a href="" class="navbar-brand  "><img src="image/icon1.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
          Surendar </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavBar"
     aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
             <h1 class="text-center">About Me..!</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="./image/icon.png" class= "imageAboutPage" alt="">
+                    <img src="./image/icon1.jpg" class= "imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
