--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                             <ul>
                                 <li>Name: Surendhar</li>
                                 <li>Age: 22</li>
-                                <li>Occupation: Web Developer</li>
+                                <li>Occupation: Web Developer,Networking,Computer H&S</li>
                             </ul>
                         </div>
                     </div>
                     <div class="row mt-3">
-                        <p> &emsp;&emsp;👋Iam Surendar. basical level skilled web developer with expertise in computer fundamentals, UI/UX design, and troubleshooting. With a solid understanding of programming languages and frameworks, create dynamic and interactive websites. and know-how in tools like Figma allow to design visually and user-friendly interfaces. Additionally, have a knack for troubleshooting computer issues and providing technical support.
+                        <p> &emsp;&emsp;👋Iam Surendar. basic level skilled web developer with expertise in computer fundamentals and Computer Networking and Computer Hardware & Software, UI/UX design, and troubleshooting. With a solid understanding of programming languages and frameworks, create dynamic and interactive websites. and know-how in tools like Figma allow to design visually and user-friendly interfaces. Additionally, have a knack for troubleshooting computer issues and providing technical support.
                         </p>
                         <!-- <link href="https://github.com/Surendhar182" rel="GitHub"> -->
                         <a href="https://github.com/Surendhar182" class="fa fa-github"></a>
